--- a/movie/package.json
+++ b/movie/package.json
@@ -8,28 +8,30 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-        "format:fix": "prettier --write --ignore-path .gitignore ."
-       
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.10.2",
+    "@types/react": "18.2.41",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-        "eslint",
-        "prettier -w"
+      "eslint",
+      "prettier -w"
     ],
     "src/**/*.{json,css,scss,md}": [
-        "prettier -w"
+      "prettier -w"
     ]
-}
+  }
 }
