--- a/movie/package.json
+++ b/movie/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "next": "14.0.3",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
